vendor/cargo/parameterized-macro-2.0.0/tests/ok/02_multiple_ids.rs
use parameterized_macro::parameterized;

#[parameterized(v = {"a", "b"}, w={1,2})]
fn my_test(v: &str, w: i32) {}

fn main() {}
