vendor/cargo/parameterized-macro-2.0.0/tests/fail/inequal_amount_of_arg_order.rs
use parameterized_macro::parameterized;

#[parameterized(b = { "a", "b", "c", "d" }, a = { 1, 2, 3 })]
pub(crate) fn my_test(b: &str, a: i32) {}

fn main() {}
